--- a/a0_practice.Rmd
+++ b/a0_practice.Rmd
@@ -1,17 +1,19 @@
 ---
-title: "a0_practice"
+title: "a0-practice"
 author: "Jean Clipperton"
-date: "`r Sys.Date()`"
+date:  #"`r Sys.Date()`"
 output: 
-  html_document:
-    theme: spacelab
+  html_document: 
+    theme: cosmo
+    fig_caption: true
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = T)
+library(tidyverse)
 ```
 
-## R Markdown
+## R Markdown: example
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
@@ -36,8 +38,7 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 
 Here, we're going to use tidyverse (which has ggplot2)
 
-```{r}
-library(tidyverse)
+```{r plot-cars}
 ggplot(mtcars)+ 
        geom_point(aes(x = mpg, y = wt, 
                       color = factor(cyl),
@@ -45,7 +46,7 @@ ggplot(mtcars)+
                       size = hp))+ 
                       #label = rownames(mtcars), check_overlap = TRUE) +
   theme_bw() +
-  scale_color_manual(values = c("black", "gray", "blue") ) +
+  scale_color_manual(values = c("black", "gray", "#800000") ) +
   labs(title = "Car MPG vs weight", 
        x = 'Miles per gallon',
        y = 'Car weight',
