--- a/a0_practice.Rmd
+++ b/a0_practice.Rmd
@@ -2,10 +2,7 @@
 title: "a0-practice"
 author: "Jean Clipperton"
 date:  #"`r Sys.Date()`"
-output: 
-  html_document: 
-    theme: cosmo
-    fig_caption: true
+output: md_document
 ---
 
 ```{r setup, include=FALSE}
@@ -19,7 +16,7 @@ This is an R Markdown document. Markdown is a simple formatting syntax for autho
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
-```{r cars}
+```{r cars, echo = F}
 summary(cars)
 ```
 
