include mt cars example

--- a/a0_practice.Rmd
+++ b/a0_practice.Rmd
@@ -2,11 +2,15 @@
 title: "a0-practice"
 author: "Jean Clipperton"
 date:  #"`r Sys.Date()`"
-output: md_document
+output: 
+  html_document:
+    theme: journal
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = T)
+
+library(gapminder)
 library(tidyverse)
 ```
 
@@ -49,5 +53,35 @@ ggplot(mtcars)+
        y = 'Car weight',
        shape="Cylinders", size="Horsepower", color = "Cylinders",
        caption = "Source: mtcars")
+
+```
+### Gapminder example
+
+```{r}
+data(gapminder)
+```
+
+### BACK to MTCARS
+
+```{r}
+data(mtcars)
+tail(mtcars)
+```
+
+```{r}
+ggplot(mtcars, aes( x =mpg, y = wt)) +
+  #geom_point()+
+  #geom_text(label = rownames(mtcars), check_overlap = TRUE) +
+  geom_point(aes(x = mpg, y = wt, 
+                      color = factor(cyl),
+                      shape = factor(cyl),
+                      size = hp)) +
+  labs(title = "Car MPG vs weight", 
+       x = 'Miles per gallon',
+       y = 'Car weight',
+       shape="Cylinders", size="Horsepower", color = "Cylinders",
+       caption = "Source: mtcars") +
+ theme_bw() +
+  scale_color_manual(values = c("black", "gray", "blue") )
 
 ```
